--- a/1/index.html
+++ b/1/index.html
@@ -2,15 +2,20 @@
 <html>
 
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142770937-1"></script>
+<!-- Global site tag (gtag.js) - Google Ads: 624543207 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-624543207"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-142770937-1');
+  gtag('config', 'AW-624543207');
 </script>
+<!-- Event snippet for Просмотр страницы conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-624543207/0jcACJ7RkdcBEOeL56kC'});
+</script>
+
     
 <!-- [pre]land_id = 6727 -->
 <script>
